unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AffiliatedCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業グループ</label>
        <referenceTo>AffiliatedCompany__c</referenceTo>
        <relationshipLabel>会社情報</relationshipLabel>
        <relationshipName>R00N10000000uu4tEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllowedIP__c</fullName>
        <label>AllowedIP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigShareholder__c</fullName>
        <label>主要株主</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BlEigyoTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BL営業担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>会社情報 (BL営業担当)</relationshipLabel>
        <relationshipName>BlEigyoTanto2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BlEmail__c</fullName>
        <label>BL担当者Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BlInsuranceCompanyName__c</fullName>
        <label>BL契約保険会社名称</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>損保ジャパン（中国）</fullName>
                </value>
                <value>
                    <fullName>三井住友（中国）</fullName>
                </value>
                <value>
                    <fullName>日本興亜（中国）</fullName>
                </value>
                <value>
                    <fullName>東京海上日動（中国）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlKeiyaku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BL有効契約有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlNaimuTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BL内務担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>取引先 (BL内務担当)</relationshipLabel>
        <relationshipName>BLNaimu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BlShimei__c</fullName>
        <label>BL担当者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Busho__c</fullName>
        <label>メディック担当者部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapitalContributionRatio__c</fullName>
        <label>出資割合</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Capital__c</fullName>
        <label>資本金</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarInsuranceNote__c</fullName>
        <label>自動車保険備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CarOwnedNum__c</fullName>
        <label>自動車保有台数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyCd__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>会社コード</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CompanyNameEng__c</fullName>
        <inlineHelpText>ローマ字入力ではなく、英文名称がわかる場合のみ入力します。</inlineHelpText>
        <label>会社名称(英語名)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyNameKana__c</fullName>
        <inlineHelpText>アラームセンターで検索しやすいように
なるべく入力して下さい。</inlineHelpText>
        <label>会社名称(カナ)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyPopularName__c</fullName>
        <inlineHelpText>会社正式名称以外に通称、別称が
ある場合に入力します。
検索用として固有名詞を入力します。</inlineHelpText>
        <label>会社通称</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanySummary__c</fullName>
        <label>会社概要</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_MC_Plan__c</fullName>
        <label>受診プラン</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Exp_Date__c</fullName>
        <label>競合他社満期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Info__c</fullName>
        <label>競合他社情報</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>International SOS</fullName>
                </value>
                <value>
                    <fullName>Emergency Assistance Japan</fullName>
                </value>
                <value>
                    <fullName>Prestage International</fullName>
                </value>
                <value>
                    <fullName>Security Support Inc.</fullName>
                </value>
                <value>
                    <fullName>AXA Assistance Japan</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContentOfBusiness__c</fullName>
        <label>事業内容</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountryCallingCodes__c</fullName>
        <inlineHelpText>電話番号の国番号を入力します。
日本＝81 
中国＝86 
香港＝852 
ベトナム＝84
インド＝91</inlineHelpText>
        <label>国際電話国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCd__c</fullName>
        <formula>CASE( CountryName__c , 
&quot;中国&quot;, &quot;CHN&quot;, 
&quot;香港&quot;, &quot;HKG&quot;, 
&quot;日本&quot;, &quot;JPN&quot;, 
&quot;ベトナム&quot;, &quot;VTN&quot;, 
&quot;インド&quot;, &quot;IND&quot;, 
&quot;インドネシア&quot;, &quot;IDN&quot;, 
&quot;フィリピン&quot;, &quot;PHL&quot;, 
&quot;カンボジア&quot;, &quot;KHM&quot;, 
&quot;タイ&quot;,&quot;THA&quot;, 
&quot;シンガポール&quot;,&quot;SGP&quot;, 
&quot;ミャンマー&quot;,&quot;MMR&quot;, 
&quot;スリランカ&quot;,&quot;LKA&quot;, 
&quot;韓国&quot;,&quot;KOR&quot;, 
&quot;台湾&quot;,&quot;TWN&quot;, 
&quot;マレーシア&quot;,&quot;MYS&quot;, 
&quot;ラオス&quot;,&quot;LAO&quot;, 
&quot;バングラデシュ&quot;,&quot;BGD&quot;, 
&quot;北米&quot;,&quot;GNA&quot;, 
&quot;メキシコ&quot;,&quot;MEX&quot;, 
&quot;中南米&quot;, &quot;GLA&quot;, 
&quot;欧州&quot;,&quot;GEU&quot;, 
&quot;オセアニア&quot;,&quot;GOC&quot;, 
&quot;CIS&quot;,&quot;GCI&quot;, 
&quot;中東&quot;,&quot;GME&quot;,
&quot;アフリカ&quot;,&quot;GAF&quot;, 
&quot;&quot;)</formula>
        <label>国コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>国コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>国名</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_and_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>ラオス</fullName>
                </value>
                <value>
                    <fullName>バングラデシュ</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>中南米</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateOfFoundation__c</fullName>
        <label>設立年</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeleteDate__c</fullName>
        <label>削除日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EigyoBusho__c</fullName>
        <formula>EigyoTanto__r.CompanyBusho__c</formula>
        <label>WB営業（部署）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTanto_TEXT__c</fullName>
        <formula>EigyoTanto__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WB営業（氏名テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WB営業担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>会社情報（営業担当）</relationshipLabel>
        <relationshipName>R00N10000000HYmmEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpandOverseasSituation__c</fullName>
        <label>海外進出状況</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtNo__c</fullName>
        <label>内線番号</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>同一の団体割引を適用するグループがある場合に選択します。</inlineHelpText>
        <label>割引グループ</label>
        <referenceTo>GroupName__c</referenceTo>
        <relationshipLabel>会社情報</relationshipLabel>
        <relationshipName>R00N10000000HYkvEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupStandardCompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>グループ割引基準企業</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HeadquartersEigyoBusho__c</fullName>
        <formula>Parent.EigyoTanto__r.CompanyBusho__c</formula>
        <label>（親会社情報）WB営業（部署）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadquartersEigyoTanto__c</fullName>
        <formula>Parent.EigyoTanto__r.Name</formula>
        <label>（親会社情報）WB営業担当</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HonshaCode__c</fullName>
        <label>本社コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportComm__c</fullName>
        <label>取込コメント</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Items_by_HQ_Personnel__c</fullName>
        <label>本社指定項目</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>管轄地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CountryName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台北</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>大阪</fullName>
                </value>
                <value>
                    <fullName>名古屋</fullName>
                </value>
                <value>
                    <fullName>ニューデリー</fullName>
                </value>
                <value>
                    <fullName>チェンナイ</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>プノンペン</fullName>
                </value>
                <value>
                    <fullName>ヤンゴン</fullName>
                </value>
                <value>
                    <fullName>バンコク</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>コロンボ</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>メキシコシティ</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeyPerson_Email__c</fullName>
        <label>（キーマン）メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LetterOfAttorneyGet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>委任状入手</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Exp_Month__c</fullName>
        <inlineHelpText>年／月の形式で入力してください　（例 2018/05）</inlineHelpText>
        <label>（医療サービス）満期月</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSEU_emailaddress__c</fullName>
        <label>企業担当者メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MSEU_hashedpassword__c</fullName>
        <label>MSEU_hashedpassword</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCustomerCompany__c</fullName>
        <label>主な販売先</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MainFinancingBank__c</fullName>
        <label>取引銀行</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>みずほ銀行</fullName>
                </value>
                <value>
                    <fullName>みずほコーポレート銀行</fullName>
                </value>
                <value>
                    <fullName>三菱東京UFJ銀行</fullName>
                </value>
                <value>
                    <fullName>三井住友銀行</fullName>
                </value>
                <value>
                    <fullName>りそな銀行</fullName>
                </value>
                <value>
                    <fullName>埼玉りそな銀行</fullName>
                </value>
                <value>
                    <fullName>地方銀行（日本）</fullName>
                </value>
                <value>
                    <fullName>その他（日本）</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>中国銀行</fullName>
                </value>
                <value>
                    <fullName>中国農業銀行</fullName>
                </value>
                <value>
                    <fullName>中国建設銀行</fullName>
                </value>
                <value>
                    <fullName>中国工商銀行</fullName>
                </value>
                <value>
                    <fullName>その他（現地）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainInsuranceCompany__c</fullName>
        <label>取引保険会社</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIOIND</fullName>
                </value>
                <value>
                    <fullName>AIU</fullName>
                </value>
                <value>
                    <fullName>JI</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NK</fullName>
                </value>
                <value>
                    <fullName>SJ</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Comp__c</fullName>
        <label>（競合）医療サービス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                </value>
                <value>
                    <fullName>International SOS</fullName>
                </value>
                <value>
                    <fullName>Emergency Assistance Japan</fullName>
                </value>
                <value>
                    <fullName>Prestage International</fullName>
                </value>
                <value>
                    <fullName>Security Support Inc.</fullName>
                </value>
                <value>
                    <fullName>AXA Assistance Japan</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MoverAndShakerBusho__c</fullName>
        <label>（キーマン）部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoverAndShakerHobby__c</fullName>
        <label>（キーマン）趣味・嗜好</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoverAndShakerNote__c</fullName>
        <label>（キーマン）その他特記事項</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MoverAndShakerOldSchool__c</fullName>
        <label>（キーマン）出身校</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoverAndShakerShimei__c</fullName>
        <label>（キーマン）氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoverAndShakerYakushoku__c</fullName>
        <label>（キーマン）役職</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaimuBusho__c</fullName>
        <formula>NaimuTanto__r.CompanyBusho__c</formula>
        <label>WB内務（部署）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaimuTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WB内務担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>会社情報（内務担当）</relationshipLabel>
        <relationshipName>R00N10000000HYmrEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_2__c</fullName>
        <label>その他特記事項</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_for_Claim_and_Payment__c</fullName>
        <label>請求･支払</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_for_MC__c</fullName>
        <label>備考（健診）</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OfficeAdd__c</fullName>
        <label>住所</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficePostcd__c</fullName>
        <label>郵便番号</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgMechNo__c</fullName>
        <inlineHelpText>半角で入力してください。</inlineHelpText>
        <label>組織機構代碼</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCompanyCd__c</fullName>
        <formula>Parent.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>親会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalInfoDisclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>個人情報開示承認の有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>President_Email__c</fullName>
        <label>（代表者）メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>President__c</fullName>
        <label>代表者</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductionItem__c</fullName>
        <label>生産品目</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_and_Area__c</fullName>
        <label>エリア</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>アジア</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>中南米</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_Exp_Month__c</fullName>
        <inlineHelpText>満期月のみを入力してください　（例　07）</inlineHelpText>
        <label>（セキュリティ）満期月</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_PIC_Romaji__c</fullName>
        <formula>EigyoTanto__r.MeiRoma__c &amp;&quot; &quot;&amp; EigyoTanto__r.SeiRoma__c</formula>
        <label>Sales PIC(Romaji)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Comp__c</fullName>
        <label>（競合）セキュリティ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                </value>
                <value>
                    <fullName>International SOS</fullName>
                </value>
                <value>
                    <fullName>Emergency Assistance Japan</fullName>
                </value>
                <value>
                    <fullName>Prestage International</fullName>
                </value>
                <value>
                    <fullName>Security Support Inc.</fullName>
                </value>
                <value>
                    <fullName>AXA Assistance Japan</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Dept_Phone__c</fullName>
        <label>セキュリティ担当部署電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Security_Dept__c</fullName>
        <label>セキュリティ担当部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_PIC_Email__c</fullName>
        <label>セキュリティ担当者Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Security_PIC_Mobile__c</fullName>
        <label>セキュリティ担当者携帯電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Security_PIC__c</fullName>
        <label>セキュリティ担当者名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shimei__c</fullName>
        <label>メディック担当者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShozokuArea__c</fullName>
        <label>所属地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Jurisdiction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>河北省</fullName>
                </value>
                <value>
                    <fullName>内モンゴル</fullName>
                </value>
                <value>
                    <fullName>山西省</fullName>
                </value>
                <value>
                    <fullName>河南省</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>塘沽</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>山東省</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>黒龍江省</fullName>
                </value>
                <value>
                    <fullName>吉林省</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>遼寧省</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>寧夏</fullName>
                </value>
                <value>
                    <fullName>新疆</fullName>
                </value>
                <value>
                    <fullName>西安</fullName>
                </value>
                <value>
                    <fullName>雲南省</fullName>
                </value>
                <value>
                    <fullName>貴州</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>浙江省</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>四川省</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Price_Application__c</fullName>
        <label>特別対応申請書（承認分）</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubBusho__c</fullName>
        <label>メディック実務担当部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubShimei__c</fullName>
        <label>メディック実務担当</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTantoEmail__c</fullName>
        <label>メディック実務担当者Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SubYakushoku__c</fullName>
        <label>メディック実務担当役職</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TantoEmail__c</fullName>
        <label>メディック担当者Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TaxIncentives__c</fullName>
        <label>税優遇措置</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CountryName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                    <default>true</default>
                    <label>なし</label>
                </value>
                <value>
                    <fullName>PEZA</fullName>
                </value>
                <value>
                    <fullName>免税</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number__c</fullName>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleEmail__c</fullName>
        <label>自動車担当者Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VehicleShimei__c</fullName>
        <label>自動車担当者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WbHumanNetwork__c</fullName>
        <label>当社の人脈</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yakushoku__c</fullName>
        <label>メディック担当者役職</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>o_id__c</fullName>
        <label>o_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sid</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CompanyPopularName__c</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>X00_Batch_Process</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/1/2000 12:00 AM</value>
        </filters>
        <label>00. 一括処理 / Batch Process</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
</CustomObject>